--- a/package.json
+++ b/package.json
@@ -7,10 +7,15 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@mdi/font": "5.9.55",
+    "animate.css": "^4.1.1",
     "core-js": "^3.6.5",
+    "material-design-icons-iconfont": "6.1.0",
+    "roboto-fontface": "*",
     "short-uuid": "^4.2.0",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
+    "vuetify": "^2.5.6",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
@@ -18,6 +23,10 @@
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-plugin-vuex": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
-    "vue-template-compiler": "^2.6.11"
+    "sass": "~1.32.0",
+    "sass-loader": "^10.0.0",
+    "vue-cli-plugin-vuetify": "~2.4.1",
+    "vue-template-compiler": "^2.6.11",
+    "vuetify-loader": "^1.7.0"
   }
 }
