--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "short-uuid": "^4.2.0",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
+    "vue-sweetalert2": "^5.0.2",
     "vuetify": "^2.5.6",
     "vuex": "^3.4.0"
   },
